try to fix horizontal scroll

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -51,7 +51,7 @@ body {
   font-size: .75rem;
   color: white;
   text-decoration: none;
-  //margin: 1 rem;
+  margin: 0rem 1rem 0rem 1rem;
 
   border-radius: 0.5rem;
 
